# reading_companion

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.codex  README.md  db.py  docker-compose.codex.yml  docker-compose.dev.yml  docker-compose.yml  ingest.py  main.py  prd.json  prd.json.example  progress.txt  pyproject.toml  ralph-claude-once.sh  ralph-claude.sh  ralph-codex-container.sh  ralph-codex-once-container.sh  ralph-codex-once.sh  ralph-codex.sh  ralph-once.sh  ralph.sh  ralph_prompt.md  requirements.txt  server.py
.codex_container/: config.toml
.devcontainer/: devcontainer.json
archive/2026-01-24-v2-retrieval/: prd.json  progress.txt
plan/: prd-ingestion-v2.md  prd-retrieval-v2.md
scripts/: compose_healthcheck.py  purge_qdrant.py
skills/ralph/: SKILL.md
static/: index.html  script.js  style.css
tests/: test_chunks.py  test_compose_healthcheck.py  test_delete_book.py  test_docker_compose.py  test_ingestion_fixture.py  test_ingestion_metrics.py  test_ingestion_progress.py  test_main_lifespan.py  test_mcp_retrieval.py  test_ollama_embed.py  test_ollama_integration.py  test_qdrant_cleanup.py  test_qdrant_integration.py  test_qdrant_payloads.py  test_sentence_stream.py  test_sync_qdrant.py  test_tasks_endpoint.py  test_tei_embed.py  test_tei_integration.py  test_ui_playwright.py  test_verify_ingestion.py
